Fix table spacing and word-break (#62)

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -31,18 +31,6 @@ td {
   mso-table-rspace: 0pt !important;
 }
 
-/* Fix webkit padding issue */
-table {
-  border-spacing: 0 !important;
-  border-collapse: collapse !important;
-  table-layout: fixed !important;
-  margin: 0 auto;
-  padding: 0;
-  &.bsi-cta-wrapper {
-    border-collapse: separate !important;
-  }
-}
-
 div {
   padding: 0;
   margin: 0;
@@ -62,6 +50,12 @@ img {
 a {
   text-decoration: none;
   color: bsiProperty('linkColor', #ff7d00);
+}
+
+/* Set word-break on table contents to regain the ability to break instead of overflowing */
+
+table.table tr td {
+  word-break: break-word;
 }
 
 /******************************************************/
